tests/snapshots/integration_tests__stdlib_primitives_MultiHeadSelfAttention.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron MultiHeadSelfAttention(dim, num_heads):
  inputs:
    default: [*batch, seq_len, dim]
  outputs:
    default: [*batch, seq_len, dim]
  impl:
    Source: core,attention/MultiHeadSelfAttention
