tests/snapshots/integration_tests__stdlib_primitives_Pad.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Pad(padding, value = 0, mode = constant):
  inputs:
    default: [*shape_in]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,structural/Pad
