tests/snapshots/integration_tests__stdlib_primitives_RMSNorm.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron RMSNorm(dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  impl:
    Source: core,normalization/RMSNorm
