tests/snapshots/integration_tests__stdlib_primitives_ReLU.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ReLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/ReLU
