tests/snapshots/integration_tests__stdlib_primitives_Reshape.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Reshape(target_shape):
  inputs:
    default: [*shape_in]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,structural/Reshape
