tests/snapshots/integration_tests__stdlib_primitives_Scale.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Scale(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,operations/Scale
