tests/snapshots/integration_tests__stdlib_primitives_ScaledDotProductAttention.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ScaledDotProductAttention(d_k):
  inputs:
    query: [*batch, seq_q, d_k]
    key: [*batch, seq_k, d_k]
    value: [*batch, seq_v, d_v]
  outputs:
    default: [*batch, seq_q, d_v]
  impl:
    Source: core,attention/ScaledDotProductAttention
