tests/snapshots/integration_tests__stdlib_primitives_SeparableConv.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SeparableConv(in_channels, out_channels, kernel_size, stride = 1, padding = 0, dilation = 1, bias = true):
  inputs:
    default: [batch, in_channels, height, width]
  outputs:
    default: [batch, out_channels, *, *]
  impl:
    Source: core,convolutions/SeparableConv
