tests/snapshots/integration_tests__stdlib_primitives_Softmax.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Softmax(dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  impl:
    Source: core,activations/Softmax
